# PYD-transcation-analysis-agent-

./: .coveragerc  .env.example  .pre-commit-config.yaml  CODE_COVERAGE_AND_BUGS_REPORT.md  DESIGN.md  FINAL_TEST_REPORT.md  MCTS_IMPLEMENTATION.md  PYD_Transaction_Analysis_Agent_TDD.docx  README.md  REQUIREMENTS.md  TESTING_GUIDE.md  TEST_SUMMARY.md  TODO.md  agent_architecture_diagram.html  bug.md  bugs_test.md  coverage.json  defects.md  pyproject.toml  run_comprehensive_tests.py  run_openai_tests.py  simple_agent_diagram.html  test_all_datasets.py  test_output.txt  test_results.txt
.github/workflows/: evaluation-ci.yml
docs/: SESSION_MEMORY_ANALYSIS.md  USER_GUIDE.md
evals/: ADDING_METRICS.md  IMPLEMENTATION_SUMMARY.md  METRICS.md  README.md  __init__.py  baseline_updater.py  ci_checker.py  compliance.py  dataset_generator.py  linter.py  metrics.py  models.py  runner.py
evals/baselines/: main_branch_metrics.json
examples/: run_example.sh  sample_transactions.csv
src/: agent.py  cli.py  config.py  csv_processor.py  mcts_engine.py  mcts_engine_v2.py  models.py  session_context.py  telemetry.py  tools_spec_compliant.py
test_output/: dataset_01_analyzed.csv
tests/: generate_synthetic_data.py  synthetic_data_generator.py  test_agent_reasoning_observability.py  test_cli.py  test_cli_usability.py  test_comprehensive_integration.py  test_e2e.py  test_edge_cases.py  test_integration.py  test_mcts.py  test_models.py  test_openai_mcts_integration.py  test_prompts.py  test_reasoning_unit.py  test_req_023_coverage.py  test_req_025_integration.py  test_session_memory.py  test_tool_interactions.py  test_tools.py
tests/data/: edge_cases_empty.csv  edge_cases_invalid_missing_columns.csv  edge_cases_special_chars.csv  labeled_100_transactions.csv  synthetic_transactions_large.csv  synthetic_transactions_medium.csv  synthetic_transactions_small.csv
tests/synthetic_datasets/: dataset_01_small_balanced.csv  dataset_01_small_balanced_ground_truth.json  dataset_02_small_balanced.csv  dataset_02_small_balanced_ground_truth.json  dataset_03_small_balanced.csv  dataset_03_small_balanced_ground_truth.json  dataset_04_small_balanced.csv  dataset_04_small_balanced_ground_truth.json  dataset_05_small_balanced.csv  dataset_05_small_balanced_ground_truth.json  dataset_06_medium_varied.csv  dataset_06_medium_varied_ground_truth.json  dataset_07_medium_varied.csv  dataset_07_medium_varied_ground_truth.json  dataset_08_medium_varied.csv  dataset_08_medium_varied_ground_truth.json  dataset_09_medium_varied.csv  dataset_09_medium_varied_ground_truth.json  dataset_10_medium_varied.csv  dataset_10_medium_varied_ground_truth.json  dataset_11_large_realistic.csv  dataset_11_large_realistic_ground_truth.json  dataset_12_large_realistic.csv  dataset_13_large_realistic.csv  (+26 more)
(+5 files in other folders)
