[tool.poetry]
name = "financial-transaction-agent"
version = "1.0.0"
description = "AI-powered financial transaction analysis agent with MCTS reasoning"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-ai = "^0.0.14"
pydantic = "^2.0"
pandas = "^2.0"
typer = "^0.9"
rich = "^13.0"
python-dotenv = "^1.0"
openai = "^1.0"
anthropic = "^0.40"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.23"
black = "^24.0"
ruff = "^0.1"
mypy = "^1.8"
pandas-stubs = "^2.0"
types-pyyaml = "^6.0"

[tool.poetry.scripts]
financial-agent = "src.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
