[project]
name = "financial-transaction-agent"
version = "1.0.0"
description = "AI-powered financial transaction analysis agent with MCTS reasoning"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic-ai>=1.12.0",
    "pydantic>=2.0",
    "pydantic-evals[logfire]>=0.1.0",
    "pandas>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
    "anthropic>=0.70",
    "pyyaml>=6.0",
    "logfire>=4.14",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "coverage>=7.0",
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pandas-stubs>=2.0",
    "types-pyyaml>=6.0",
    "griffe>=1.14.0",
]

[project.scripts]
financial-agent = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
